<resources>
    <string name="app_name">My App</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter your text here</string>
    <string name="pref_key">com.example.macbookpro.myapp.PREF_KEY</string>
    <string name="rage_string">com.example.macbookpro.myapp.RAGESTRING</string>
    <string name="rage_string_default">CRUD!</string>

    <string name="button_send">Send Off!</string>
    <string name="title_activity_display_message">A Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news_feed">News Feed</string>
    <string name="title_activity_intent_pool">Intent Pool</string>
    <string name="intent_pool_activity1">Enter phone number</string>
    <string name="intent_pool_activity2">Enter address</string>
    <string name="intent_pool_activity3">Enter email</string>
    <string name="intent_pool_activity4">Call Somebody</string>
    <string name="title_activity_frame__example">Frame_Example</string>
    <string name="action_search">Search</string>
    <string-array name="colors">
        <item>Green</item>
        <item>Orange</item>
        <item>Red</item>
    </string-array>
    <string name="title_activity_menus">MenusActivity</string>


    <string name="context_menu">Context Menu</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_shrink">Shrink</string>

    <string name="popup_menu">Popup Menu</string>
    <string name="popup_menu_quit">Quit</string>
    <string name="popup_menu_restart">Restart</string>
    <string name="title_activity_basic_string_list">BasicStringList</string>
    <string name="show_basic_list_view">Show Basic String list</string>
    <string-array name="list_levels">
        <item>Level Greenland</item>
        <item>Level Humid Mist</item>
        <item>Level Damp Swamp</item>
        <item>Level All Hail</item>
        <item>Level Volcanic Ash</item>
    </string-array>
    <string name="title_activity_creatures">CreaturesActivity</string>
    <string name="title_activity_bitmap_processing">BitmapProcessing</string>
    <string name="title_activity_bitmap">BitmapActivity</string>
    <string name="bitmap_image_description">Changeable photo</string>
    <string name="bitmap_sample_size">Samle sizephoto</string>
    <string name="bitmap_scale_up">Scale Up</string>
    <string name="bitmap_scale_down">Scale Down</string>
    <string name="bitmap_change_image">Change Image</string>
    <string name="title_mutlidevicesupportactivity_list">Items</string>
    <string name="title_mutlidevicesupportactivity_detail">MutliDeviceSupportActivity Detail
    </string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="title_activity_external_file_viewer">ExternalFileViewerActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_camera_api">CameraAPIActivity</string>
    <string name="title_activity_sound_monitor">SoundMonitorActivity</string>
    <string name="title_activity_handler_example">HandlerExampleActivity</string>
    <string name="title_activity_async">AsyncActivity</string>
    <string name="title_activity_broadcast">BroadcastActivity</string>


    <!-- All strings in the app should be externalized
        like such. This allows for easier localization -->


</resources>
