<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.macbookpro.myapp.BitmapActivity">

    <!-- In here most references are underscore notation distinguished from class attrs -->
    <ImageView
        android:id="@+id/bitmap_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bitmap_image_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitmap_sample_size"/>

        <TextView
            android:id="@+id/bitmap_sample_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bitmap_scale_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitmap_scale_up"
            android:onClick="scaleUp"/>
        <Button
            android:id="@+id/bitmap_scale_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitmap_scale_down"
            android:onClick="scaleDown"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bitmap_change_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitmap_change_image"
            android:onClick="changeImage"/>
        <TextView
            android:id="@+id/bitmap_image_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
