<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.macbookpro.myapp.MenusActivity">

    <Button
        android:id="@+id/context_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/context_menu"/>


    <Button
        android:layout_marginTop="100dp"
        android:id="@+id/popup_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_menu"
        android:onClick="showPopup"/>

    <Button
        android:layout_marginTop="200dp"
        android:id="@+id/show_basic_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_basic_list_view"
        android:onClick="showBasicListView"/>
</RelativeLayout>
